# src/main/java/mg/improve/todo/domain/dto/response/StatsResponse.java
@@ -1,0 +1,9 @@
+package mg.improve.todo.domain.dto.response;
+
+public record StatsResponse(
+		long undoneTodoCount,
+		long upcomingEventCount,
+		String upcomingEventsTotalLength,
+		TodoResponse closestDeadlineTodo
+	) {
+}
